# asp_ws

./: .gitignore  README.md
asp_uav_control/: CMakeLists.txt  package.xml
docs/: ASP_FINAL_CARRIER_MODE.md  ASP_FINAL_NEW_STACK_ARCHITECTURE.md  ASP_FINAL_NEW_STACK_RUNBOOK.md  ASP_FINAL_RUNTIME_CONTRACT.md  FINAL_MISSION_INTEGRATION.md  MISSION_FLOW_RUNTIME_CONTRACT.md  MISSION_RUNTIME_GUARDS.md  uav_subsystem.md
src/: asp_uav_control.cpp  uav_exploration_node.cpp
src/asp_final_bringup/: package.xml  setup.cfg  setup.py
src/asp_final_bringup/asp_final_bringup/: final_visualization.py  web_dashboard.py
src/asp_final_bringup/config/: asp_final_mission.rviz
src/asp_final_bringup/launch/: final_mission.launch.py  rviz.launch.py
src/asp_final_bringup/web/: dashboard.js  index.html  styles.css
src/asp_final_gazebo_bridge/: package.xml  setup.cfg  setup.py
src/asp_final_gazebo_bridge/asp_final_gazebo_bridge/: final_pose_tf_broadcaster.py  ugv_cmd_vel_relay.py
src/asp_final_gazebo_bridge/launch/: gazebo_bridge.launch.py
src/asp_final_mission/: package.xml  setup.cfg  setup.py
src/asp_final_mission/asp_final_mission/: mission_supervisor.py
src/asp_final_perception/: package.xml  setup.cfg  setup.py
src/asp_final_perception/asp_final_perception/: aruco_detector.py  detected_marker_csv.py
src/asp_final_perception/config/: perception_params.yaml
src/asp_final_px4_bridge/: package.xml  setup.cfg  setup.py
src/asp_final_px4_bridge/asp_final_px4_bridge/: px4_offboard_bridge.py
src/asp_final_tools/: package.xml  setup.cfg  setup.py
src/asp_final_tools/asp_final_tools/: final_path_audit.py  mission_timer_csv_logger.py  path_audit.py
src/asp_final_tools/scripts/: audit_no_legacy_refs.sh
src/asp_final_uav/: package.xml  setup.cfg  setup.py
src/asp_final_uav/asp_final_uav/: uav_mission_node.py
src/asp_final_uav/config/: uav_params.yaml
src/asp_final_uav/path/: mission2_uav_waypoints.csv
src/asp_final_ugv/: package.xml  setup.cfg  setup.py
src/asp_final_ugv/asp_final_ugv/: ugv_mission_node.py  ugv_path_follower.py
src/asp_final_ugv/config/: ugv_params.yaml
src/asp_final_ugv/path/: mission1_carrier.csv  mission3_rendezvous.csv
src/asp_mission_manager/: package.xml  setup.cfg  setup.py
src/asp_mission_manager/asp_mission_manager/: mission_manager_node.py
src/asp_mission_manager/config/: mission_manager_params.yaml
src/asp_mission_manager/docs/: MISSION_FSM.md
src/asp_mission_manager/launch/: full_mission.launch.py  mission_manager.launch.py
src/asp_perception/: CMakeLists.txt  package.xml
src/asp_perception/config/: aruco_detector_params.yaml  uav_aruco_detector_params.yaml
src/asp_perception/docs/: MISSION2_TRIGGER_ARUCO.md  UAV_ARUCO_DETECTOR.md
src/asp_perception/launch/: uav_aruco_detector.launch.py  ugv_aruco_detector.launch.py
src/asp_perception/src/: uav_aruco_detector_node.cpp  ugv_aruco_detector_node.cpp
src/asp_precision_landing/: package.xml  setup.cfg  setup.py
src/asp_precision_landing/asp_precision_landing/: precision_landing_node.py
src/asp_precision_landing/config/: precision_landing_params.yaml
src/asp_precision_landing/docs/: MISSION4_PRECISION_LANDING.md
src/asp_precision_landing/launch/: precision_landing.launch.py
src/asp_uav_control/: package.xml  setup.cfg  setup.py
src/asp_uav_control/asp_uav_control/: uav_exploration_node.py
src/asp_uav_control/config/: uav_exploration_params.yaml
src/asp_uav_control/docs/: MISSION4_UAV_EXPLORATION.md
src/asp_uav_control/launch/: uav_exploration.launch.py  uav_exploration_generated.launch.py  uav_exploration_mission2.launch.py  uav_exploration_safe.launch.py
src/asp_uav_control/path/: uav_path.csv  uav_path_generated.csv  uav_path_mission2.csv  uav_path_mission2_senior.csv  uav_path_safe.csv
src/asp_ugv_control/: CMakeLists.txt  package.xml
src/asp_ugv_control/config/: path_follower_params.yaml  rendezvous_params.yaml
src/asp_ugv_control/docs/: MISSION1_UGV_PATH_FOLLOWER.md  MISSION3_UGV_RENDEZVOUS.md
src/asp_ugv_control/launch/: ugv_path_follower.launch.py  ugv_rendezvous.launch.py
src/asp_ugv_control/path/: mission.csv  rendezvous.csv
src/asp_ugv_control/src/: ugv_path_follower_node.cpp  ugv_rendezvous_node.cpp
src/uav_aruco_detector/: CMakeLists.txt  README.md  package.xml
src/uav_aruco_detector/config/: aruco_detector.yaml
src/uav_aruco_detector/launch/: aruco_detector.launch.py
src/uav_aruco_detector/src/: aruco_detector_node.cpp
src/uav_precision_landing/: CMakeLists.txt  package.xml
src/uav_precision_landing/src/: precision_landing_node.cpp
src/utilities_pkg/: distance_calculator.py
src/utilities_pkg/gazebo_env_setup/: CMakeLists.txt  README_TF_FIX.md  package.xml
src/utilities_pkg/gazebo_env_setup/config/: asp_final_proj.rviz
src/utilities_pkg/gazebo_env_setup/launch/: bridge_and_tf.launch.py  controller_setup.launch.py  turn_interfaces.launch.py  ugv_bridge.launch.py
src/utilities_pkg/gazebo_env_setup/src/: mission_timer.cpp  pose_tf_broadcaster.cpp
src/utilities_pkg/px4_ros_com/: CMakeLists.txt  package.xml
src/utilities_pkg/px4_ros_com/src/examples/offboard/: offboard_control.cpp
src/utilities_pkg/utilities_pkg/: CMakeLists.txt  package.xml
src/utilities_pkg/utilities_pkg/src/: keyboard_control_node.cpp  ugv_keyboard_control_node.cpp
tools/asp_final_diagnostics/: final_pipeline_audit.sh  final_tf_audit.sh
tools/diagnostics/: README_uav_runtime_debug.md  UAV_RUNTIME_DIAGNOSIS_RESULT.md  compare_runtime_logs.sh  mission_flow_audit.sh  mission_path_audit.py  uav_offboard_runtime_check.sh  uav_pose_source_audit.sh  ugv_cmd_source_audit.sh
tools/path_tools/: README_path_generation.md  extract_marker_poses.py  generate_mission2_uav_path.py  generate_safe_uav_path.py  generate_takeoff_safe_csv.py  generate_uav_path_from_markers.py  marker_poses.csv
