<?xml version="1.0"?>
<package format="3">
  <name>asp_final_bringup</name>
  <version>0.1.0</version>
  <description>Final ASP mission bringup launch files.</description>
  <maintainer email="subin@example.com">subin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>asp_final_gazebo_bridge</exec_depend>
  <exec_depend>asp_final_px4_bridge</exec_depend>
  <exec_depend>asp_final_mission</exec_depend>
  <exec_depend>asp_final_ugv</exec_depend>
  <exec_depend>asp_final_uav</exec_depend>
  <exec_depend>asp_final_perception</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
