<?xml version="1.0"?>
<package format="3">
  <name>asp_final_uav</name>
  <version>0.1.0</version>
  <description>Final ASP UAV waypoint exploration and precision landing commander.</description>
  <maintainer email="subin@example.com">subin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
